Add position information to area model (#110)
* Add position information to area model

* updated Area schema in api docs
